#395 Metadata misalignment fix

--- a/webtree/themes/main/css/style.css
+++ b/webtree/themes/main/css/style.css
@@ -398,6 +398,10 @@ story-nav-wrapper a img{
     margin: 0;
 }
 
+.element {
+    clear: both;
+}
+
 
 
 /* ITEMS BROWSE / PAGE NAV ********************************/
